# goodgirls-registry

./: .env.example  Cargo.toml  DESIGN.md  README.md  RETROSPECTIVE.md
migrations/: 0001_init.sql
reference/: goodgirls-worker.js
src/: atproto.rs  auth.rs  db.rs  error.rs  lib.rs  main.rs  routes.rs  service.rs  state.rs  validate.rs
src/handlers/: manage.rs  mod.rs  public.rs
templates/: admin.html  index.html  manage.html
tests/: integration.rs
